--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
@@ -24,7 +26,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "^2.0.5",
-    "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   }
 }
