--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,17 @@
         "jsx": "preserve"
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "**/*.spec.ts",
+        "**/*.spec.tsx",
+        "**/*.test.ts",
+        "**/*.test.tsx"
     ],
     "include": [
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
-        "pages/index.js"
+        "pages/index.js",
+        "config/jest.setup.js"
     ]
 }
