--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "redux": "^4.0.5"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.10.1",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.2",
@@ -31,6 +32,7 @@
         "enzyme-to-json": "^3.5.0",
         "eslint": "^7.2.0",
         "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-jest-dom": "^3.0.1",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.4",
