--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "dev": "next dev",
+        "lint": "eslint",
         "build": "next build",
         "start": "next start"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm lint",
+            "pre-push": "npm test && npm version prerelease"
+        }
     },
     "dependencies": {
         "@material-ui/core": "^4.10.2",
@@ -37,6 +44,7 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.4",
+        "husky": "^4.2.5",
         "jest": "^26.1.0",
         "prettier": "^2.0.5",
         "ts-jest": "^26.1.1",
