--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -32,3 +32,11 @@ jobs:
 
     - name: Run tests
       run: yarn test
+
+    - name: Deploy to Vercel (preview)
+      uses: amondnet/vercel-action@v19
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
