--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm lint",
+            "pre-commit": "npm run lint",
             "pre-push": "npm test && npm version prerelease"
         }
     },
     "dependencies": {
         "@material-ui/core": "^4.10.2",
         "@material-ui/icons": "^4.9.1",
+        "@reduxjs/toolkit": "^1.4.0",
         "next": "9.4.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
@@ -32,6 +33,7 @@
         "@types/jest": "^26.0.2",
         "@types/node": "^14.0.13",
         "@types/react": "^16.9.36",
+        "@types/react-redux": "^7.1.9",
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
         "enzyme": "^3.11.0",
