--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/node": "^14.0.13",
         "@types/react": "^16.9.36",
         "@types/react-redux": "^7.1.9",
+        "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
         "enzyme": "^3.11.0",
@@ -48,6 +49,7 @@
         "husky": "^4.2.5",
         "jest": "^26.1.0",
         "prettier": "^2.0.5",
+        "redux-mock-store": "^1.5.4",
         "ts-jest": "^26.1.1",
         "typescript": "^3.9.5"
     }
