--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run lint",
+            "pre-commit": "npm run lint .",
             "pre-push": "npm test && npm version prerelease"
         }
     },
