--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "redux": "^4.0.5"
     },
     "devDependencies": {
+        "@babel/core": "^7.10.5",
+        "@testing-library/dom": "^7.21.1",
         "@testing-library/jest-dom": "^5.10.1",
         "@testing-library/react": "^10.4.5",
         "@testing-library/user-event": "^12.0.11",
@@ -39,6 +41,7 @@
         "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
+        "babel-jest": "^26.1.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.5.0",
