--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.10.5",
+        "@babel/preset-env": "^7.10.4",
         "@testing-library/dom": "^7.21.1",
         "@testing-library/jest-dom": "^5.10.1",
         "@testing-library/react": "^10.4.5",
@@ -43,6 +44,7 @@
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
         "babel-jest": "^26.1.0",
+        "babel-plugin-dynamic-import-node": "^2.3.3",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.5.0",
