Make hooks only apply to staged files
Improve workflow as follows:
* Refine hooks by only linting staged .{js,jsx,ts,tsx} files. If there
are any such staged files, run tsc --noEmit on the whole project to
check for any type errors. This is to increase accuracy of
linting/testing.
* Only apply commit/push hooks to master and preview branches. This is
to encourage the usage of other branches for backup/contributing
purposes.

This commit introduces two main dependencies: git-branch-is (for
portability purposes; we want the scripts to be runnable on both Windows
and POSIX shells) and lint-staged.

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
         "test:watch": "jest --watch",
         "dev": "next dev",
         "lint": "eslint",
+        "lint:fix": "eslint --fix",
         "build": "next build",
         "start": "next start"
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm lint",
-            "pre-push": "npm test && npm version prerelease"
+            "pre-commit": "(git-branch-is -r \"^(master|preview)$\" && lint-staged) || git-branch-is -r --not \"^(master|preview)$\"",
+            "pre-push": "(git-branch-is -r \"^(master|preview)$\" && npm test) || git-branch-is -r --not \"^(master|preview)$\""
         }
     },
     "dependencies": {
@@ -44,8 +45,10 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.4",
+        "git-branch-is": "^4.0.0",
         "husky": "^4.2.5",
         "jest": "^26.1.0",
+        "lint-staged": ">=10",
         "prettier": "^2.0.5",
         "ts-jest": "^26.1.1",
         "typescript": "^3.9.5"
