--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
     "presets": [
         [
-            "next/babel",
-            {
+            "next/babel", {
                 "preset-typescript": {
                     "parserOpts": {
                         "strictMode": true
